src/App.css
@import url('https://fonts.googleapis.com/css?family=Indie+Flower');

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 50px;
  padding: 20px;
  padding-top: 5px;
  color: yellow;
  font-family: 'Indie Flower', cursive;
  font-size: 20px;
  text-align: left;
}
.App-header h1{float:left;}
h6.right{float:right;color:#f34322}
.App-title {
  font-size: 1.5em;
}
.btnContainer{
  margin-bottom: 10px;
}
button{
  text-align: center;
}
.App-intro {
  font-size: large;
  margin: 5px;
  clear: both;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
p {
  margin-left: 30px;
}

